--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <script src="p5.js"></script>
     <script src="p5.sound.min.js"></script>
+    <script src="clmtrackr.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
 
@@ -10,6 +11,6 @@
   <body>
     <main>
     </main>
-    <script src="FinalProjectCode.js"></script>
+    <script src="facetracking.js"></script>
   </body>
 </html>
