--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   <body>
     <main>
     </main>
-    <script src="facetracking.js"></script>
+    <script src="FinalProjectCode.js"></script>
   </body>
 </html>
