--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <main>
     </main>
+    <!-- <script src="Projects/FurbyTagGame.js"></script> -->
     <script src="FinalProjectCode.js"></script>
   </body>
 </html>
